2005-04-01  Alan Modra  <amodra@bigpond.net.au>

	* elf64-ppc.c (ppc64_elf_edit_toc): Account for dynamic relocs
	that we no longer need.

2005-04-01  Alan Modra  <amodra@bigpond.net.au>

	* elf64-ppc.c (ppc64_elf_get_synthetic_symtab): Return -1 on errors
	rather than 0.
	(ppc64_elf_check_relocs): Remove unnecessary SEC_ALLOC check.

2005-03-31  H.J. Lu  <hongjiu.lu@intel.com>

	* elf.c (assign_section_numbers): Fix a typo.

2005-03-31  H.J. Lu  <hongjiu.lu@intel.com>

	* elflink.c (elf_link_input_bfd): Remove the extra `\n' in
	error message.
	(_bfd_elf_section_already_linked): Likewise.

2005-03-31  Jerome Guitton  <guitton@gnat.com>

	* config.in: Regenerate.

2005-03-31  Jerome Guitton  <guitton@gnat.com>

	* config.in (HAVE_DECL_BASENAME): New configure macro.
	* configure.in: Check for basename.
	* configure: Regenerate.

2005-03-30  Julian Brown  <julian@codesourcery.com>

	* bfd-in.h (bfd_is_arm_mapping_symbol_name): Rename from
	bfd_elf32_is_arm_mapping_symbol_name.
	* bfd-in2.h: Regenerate.
	* cpu-arm.c (bfd_is_arm_mapping_symbol_name): Rename from
	bfd_elf32_is_arm_mapping_symbol_name.
	* elf32-arm.c (elf32_arm_is_target_special_symbol): Rename
	bfd_elf32_is_arm_mapping_symbol_name to bfd_is_arm_mapping_symbol_name.
	(arm_elf_find_function): Likewise.
	(elf32_arm_output_symbol_hook): Likewise.

2005-03-30  Julian Brown  <julian@codesourcery.com>

	* bfd-in.h (bfd_elf32_is_arm_mapping_symbol_name): Add prototype.
	* bfd-in2.h: Regenerate.
	* elf32-arm.c (elf32_arm_is_target_special_symbol): Rename call to
	bfd_elf32_is_arm_mapping_symbol_name.
	(elf32_arm_output_symbol_hook): Likewise.
	(arm_elf_find_function): Likewise, and include STT_NOTYPE in test for
	mapping symbols.
	(is_arm_mapping_symbol_name): Function moved from here...
	* cpu-arm.c (bfd_elf32_is_arm_mapping_symbol_name): ...to here, renamed
	and made global.

2005-03-29  Aaron W. LaFramboise  <aaron98wiridge9@aaronwl.com>

	* configure.in: Check for ffs decl and alphabetize.